solving image upload

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <div class="container">
     <main>
       <div class="bg">
-        <img src="/images/bg-pattern-card.svg" alt="background-card">
+        <img src="images/bg-pattern-card.svg" alt="background-card">
       </div>
       <div class="second">
-        <img src="/images/image-victor.jpg" alt="img-user">
+        <img src="images/image-victor.jpg" alt="img-user">
         <h1 class="user">Victor Crest <span>26</span></h1>
         <p class="city">London</p>
       </div>
